# spotell

./: LICENSE  spotell.cabal
app/: Main.hs
src/: Lib.hs
src/Youtube/: Channel.hs  Playlist.hs  PlaylistVideo.hs
