name:                spotell
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/kelvinlouis/spotell#readme
license:             BSD3
license-file:        LICENSE
author:              Kelvin Louis
maintainer:          kelvin.louis@students.fhnw.ch
copyright:           2016 Kelvin Louis
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , wreq
                     , lens
                     , text
                     , generic-deriving
                     , aeson
  default-language:    Haskell2010

executable spotell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , spotell
  default-language:    Haskell2010

test-suite spotell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , spotell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kelvinlouis/spotell
